# todo-list-rust

./: .env  Cargo.toml  database.json
migrations/2023-11-22-140037_create_tasks/: up.sql
migrations/2023-11-22-141245_update_tasks/: down.sql  up.sql
migrations/2023-12-12-140940_revert_deleted_migration/: down.sql  up.sql
migrations/2023-12-12-141425_deleted_migration/: down.sql  up.sql
migrations/2023-12-12-144013_add_description/: down.sql  up.sql
migrations/2023-12-12-144255_delete_description/: down.sql  up.sql
migrations/2023-12-12-150000_add_description/: down.sql  up.sql
migrations/2023-12-12-151104_delete_description/: up.sql
migrations/2023-12-12-151125_add_description/: down.sql  up.sql
migrations/2023-12-12-151421_add_priority/: down.sql  up.sql
migrations/2023-12-12-151526_delete_notes/: down.sql  up.sql
migrations/2023-12-12-152117_add_completed/: down.sql  up.sql
migrations/2023-12-12-152302_add_created_at/: down.sql  up.sql
migrations/2023-12-14-161545_add_updated_at/: up.sql
src/: lib.rs  main.rs  schema.rs  types.rs
src/tasks/: mod.rs  tasks_controller.rs  tasks_service.rs  tasks_types.rs
x_mock_cli/: x_tasks_service_cli  x_types_cli
