[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
ferris-says = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.0", features = ["serde", "v4"] }
